--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+
+# Optional eslint cache
+.eslintcache
+
+# unplugin-auto-import
+.eslintrc-auto-import.json
+auto-imports.d.ts
