--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
+    "unplugin-auto-import": "^0.11.2",
     "vite": "^3.1.0"
   }
 }
