--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,7 @@
     // Add your own rules here to override ones from the extended configs.
     "react/react-in-jsx-scope": "off",
     "space-before-function-paren": ["error", "never"],
-    "import/no-unresolved": "off"
+    "import/no-unresolved": "off",
+    "react/jsx-no-undef": "off"
   }
 }
