--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.8",
+    "file-save": "^0.2.0",
     "postcss": "^8.4.16",
     "postcss-preset-env": "^7.8.2",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "unplugin-auto-import": "^0.11.2",
+    "uppercamelcase": "^3.0.0",
     "vite": "^3.1.0"
   }
 }
