--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
       "assets/*": ["src/assets/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "./*.d.ts"],
   "exclude": ["node_modules", "dist"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
